# biomedical-data-generator

./: .buildinfo  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COVERAGE_ANALYSIS.md  MVP_TEST_ANALYSIS.md  Makefile  README.md  README_UPDATES_NEEDED.md  api.html  code-doc.html  codecov.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: pypi_upload.yml  test.yml
_autosummary/: biomedical_data_generator.BatchEffectsConfig.html  biomedical_data_generator.ClassConfig.html  biomedical_data_generator.CorrCluster.html  biomedical_data_generator.CorrClusterConfig.html  biomedical_data_generator.DatasetConfig.html  biomedical_data_generator.DatasetMeta.html  biomedical_data_generator.config.BatchEffectsConfig.html  biomedical_data_generator.config.ClassConfig.html  biomedical_data_generator.config.CorrClusterConfig.html  biomedical_data_generator.config.CovarianceChannel.html  biomedical_data_generator.config.DatasetConfig.html  biomedical_data_generator.config.MeanChannel.html  biomedical_data_generator.config.StandaloneInformativeGroup.html  biomedical_data_generator.effects.batch.html  biomedical_data_generator.features.correlated.html  biomedical_data_generator.features.informative.html  biomedical_data_generator.features.noise.html  biomedical_data_generator.find_seed_for_correlation.html  biomedical_data_generator.generate_correlated_cluster.html  biomedical_data_generator.generate_dataset.html  biomedical_data_generator.meta.DatasetMeta.html  biomedical_data_generator.meta.FeatureRoles.html  biomedical_data_generator.meta.FeatureStrengths.html  biomedical_data_generator.meta.compute_feature_roles.html  biomedical_data_generator.meta.compute_feature_strengths.html  biomedical_data_generator.utils.correlation_tools.html  biomedical_data_generator.utils.export_utils.html  biomedical_data_generator.utils.sampling.html  biomedical_data_generator.utils.sklearn_compat.html  biomedical_data_generator.utils.visualization.html
_modules/: index.html
_modules/biomedical_data_generator/: config.html  generator.html  meta.html
_modules/biomedical_data_generator/effects/: batch.html
_modules/biomedical_data_generator/features/: correlated.html  informative.html  noise.html
_modules/synthetic_data_generator/: synthetic_data_generator.html
_sources/: api.rst.txt  code-doc.rst.txt  index.rst.txt
_sources/_autosummary/: biomedical_data_generator.BatchEffectsConfig.rst.txt  biomedical_data_generator.ClassConfig.rst.txt  biomedical_data_generator.CorrCluster.rst.txt  biomedical_data_generator.CorrClusterConfig.rst.txt  biomedical_data_generator.DatasetConfig.rst.txt  biomedical_data_generator.DatasetMeta.rst.txt  biomedical_data_generator.config.BatchEffectsConfig.rst.txt  biomedical_data_generator.config.ClassConfig.rst.txt  biomedical_data_generator.config.CorrClusterConfig.rst.txt  biomedical_data_generator.config.CovarianceChannel.rst.txt  biomedical_data_generator.config.DatasetConfig.rst.txt  biomedical_data_generator.config.MeanChannel.rst.txt  biomedical_data_generator.config.StandaloneInformativeGroup.rst.txt  biomedical_data_generator.effects.batch.rst.txt  biomedical_data_generator.features.correlated.rst.txt  biomedical_data_generator.features.informative.rst.txt  biomedical_data_generator.features.noise.rst.txt  biomedical_data_generator.find_seed_for_correlation.rst.txt  biomedical_data_generator.generate_correlated_cluster.rst.txt  biomedical_data_generator.generate_dataset.rst.txt  biomedical_data_generator.meta.DatasetMeta.rst.txt  biomedical_data_generator.meta.FeatureRoles.rst.txt  biomedical_data_generator.meta.FeatureStrengths.rst.txt  biomedical_data_generator.meta.compute_feature_roles.rst.txt  biomedical_data_generator.meta.compute_feature_strengths.rst.txt  biomedical_data_generator.utils.correlation_tools.rst.txt  biomedical_data_generator.utils.export_utils.rst.txt  biomedical_data_generator.utils.sampling.rst.txt  biomedical_data_generator.utils.sklearn_compat.rst.txt  biomedical_data_generator.utils.visualization.rst.txt
_static/: documentation_options.js
archive/: synthetic_data_generator.py  synthetic_data_generator_tools.py  test_synthetic_data_generator_tools.py
archive/examples/: artificial_biomarker_data_1.ipynb  artificial_biomarker_data_2.ipynb  example.py
biomedical_data_generator/: __init__.py  __main__.py  config.py  feature_relevance.py  generator.py  meta.py
biomedical_data_generator/compat/: sklearn.py
biomedical_data_generator/effects/: __init__.py  batch.py
biomedical_data_generator/features/: __init__.py  correlated.py  informative.py  noise.py
biomedical_data_generator/utils/: __init__.py  correlation_tools.py  export_utils.py  sampling.py  sklearn_compat.py  visualization.py
docs/: quickstart.md
docs/source/: code-doc.rst  conf.py  index.rst
examples/: 01_basic_usage.py  02_batch_effects.py  03_class_specific_correlations.py  04_feature_selection_stability.py  artificial_biomarker_data_1.ipynb  artificial_biomarker_data_2.ipynb  basic_usage.py  class_specific_example_1_disease_activated_pathway.csv  class_specific_example_2_progressive_correlation.csv  class_specific_example_3_multiple_pathways.csv  example.py  smoke_example.py
synthetic_data_generator/: __init__.py  core.py
tests/: test_artificial_data_generator_tools.py  test_class_counts.py  test_config.py  test_config_channels.py  test_config_extended.py  test_correlated.py  test_correlated_cluster.py  test_correlation_matrix.py  test_correlation_tools.py  test_effects_batch.py  test_effects_batch_param.py  test_examples.py  test_export_utils.py  test_feature_roles.py  test_generate_dataset.py  test_generate_dataset_basic.py  test_generator.py  test_informative.py  test_main.py  test_meta_relevance.py  test_mvp_critical.py  test_noise_distribution.py  test_pc1_share.py  test_sampling.py  test_shift_classes.py  test_sklearn_compat.py  test_synthetic_data_generator_tools.py  test_visualization.py
(+5 files in other folders)
