[tool.poetry]
name = "biomedical-data-generator"
version = "1.0.0"
description = "Generate synthetic data for data science, machine learning, and statistics."
authors = ["Sigrun May <s.may@ostfalia.de>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/sigrun-may/biomedical-data-generator"
include = ["LICENSE"]
keywords = [
    "artificial data", "synthetic data", "data generation", "data simulation", "data science", "machine learning",
    "statistics", "data analysis"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/sigrun-may/biomedical-data-generator/issues"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
matplotlib = { version = "*", optional = true }
numpy = "*"
pandas = "*"
pydantic = "*"
pyyaml = "*"
scikit-learn = { version = "*", optional = true }
seaborn = { version = "*", optional = true }

[tool.poetry.extras]
visualization = ["matplotlib", "seaborn"]
examples = ["scikit-learn"]

[tool.poetry.group.jupyter.dependencies]
jupyter = "*"
matplotlib = "*"
seaborn = "*"

[tool.poetry.group.lint.dependencies]
black = {extras = ["jupyter"], version = "^25.1.0"}
mdformat = "^0.7.18"
mypy = "^1.10.0"
pandas-stubs = "*"
ruff = "^0.13.0"
twine = "^6.2.0"
types-PyYAML = "*"
types-seaborn = "*"

[tool.poetry.group.test.dependencies]
coverage = {version="^7.6.0", extras=["toml"]}
pyarrow = "*"
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
scikit-learn = "*"
scipy = "*"

[tool.poetry.group.doc.dependencies]
myst_parser = "*"
sphinx = "*"
sphinx_copybutton = "*"
sphinx_rtd_theme = "*"

[tool.poetry.scripts]
bdg = "biomedical_data_generator.__main__:main"

# ---- Black ----
[tool.black]
line-length = 120
target-version = ["py311"]

# ---- Ruff ----
[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# E,F: pycodestyle/pyflakes | I: isort | UP: pyupgrade | D: pydocstyle via Ruff
select = ["E", "F", "I", "UP", "D"]
ignore = ["D105", "D107"]  # magic methods & __init__ docstrings not mandatory
per-file-ignores = { "tests/**" = ["D"] }

[tool.ruff.lint.pydocstyle]
convention = "google"

# ---- Pytest / Coverage ----
[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["biomedical_data_generator"]

[tool.coverage.report]
show_missing = true
skip_empty = true

# ---- MyPy ----
[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
strict_optional = true
plugins = ["pydantic.mypy"]
